# formula-recognize

./: .gitignore  README.md  package-lock.json  package.json
src/: App.vue  main.ts  tray.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  fs.json  shell.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/component/: IndexPage.vue
src/utils/: imageUtils.ts
